--- a/package.json
+++ b/package.json
@@ -12,29 +12,36 @@
     "test": "NODE_ENV=test jest'"
   },
   "devDependencies": {
-    "eslint": "5.16.0",
-    "eslint-config-prettier": "4.3.0",
-    "eslint-config-standard": "12.0.0",
-    "eslint-plugin-import": "2.17.2",
-    "eslint-plugin-jest": "22.5.1",
-    "eslint-plugin-node": "9.0.1",
-    "eslint-plugin-prettier": "3.1.0",
-    "eslint-plugin-promise": "4.1.1",
-    "eslint-plugin-standard": "4.0.0",
-    "husky": "2.3.0",
-    "nodemon": "1.19.0",
-    "prettier": "1.17.1"
+    "@types/hapi__joi": "^17.1.0",
+    "eslint": "7.1.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-config-standard": "14.1.1",
+    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-jest": "23.13.2",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "3.1.3",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-standard": "4.0.1",
+    "husky": "4.2.5",
+    "nodemon": "2.0.4",
+    "prettier": "2.0.5",
+    "sequelize-cli": "^5.5.1"
   },
   "dependencies": {
-    "@koa/cors": "2.2.3",
-    "dotenv": "8.0.0",
-    "joi": "14.3.1",
-    "koa": "2.7.0",
-    "koa-bodyparser": "4.2.1",
-    "koa-compress": "3.0.0",
-    "koa-helmet": "4.1.0",
-    "koa-logger": "3.2.0",
-    "koa-router": "7.4.0",
-    "uuid": "3.3.2"
-  }
+    "@hapi/joi": "^17.1.1",
+    "@koa/cors": "3.1.0",
+    "dotenv": "8.2.0",
+    "koa": "2.12.0",
+    "koa-bodyparser": "4.3.0",
+    "koa-compress": "4.0.1",
+    "koa-helmet": "5.2.0",
+    "koa-logger": "3.2.1",
+    "koa-router": "9.0.1",
+    "uuid": "8.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
+  "license": "MIT"
 }
