--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "husky": "4.2.5",
     "nodemon": "2.0.4",
     "prettier": "2.0.5",
+    "sequelize": "^5.21.12",
     "sequelize-cli": "^5.5.1"
   },
   "dependencies": {
