--- a/package.json
+++ b/package.json
@@ -13,31 +13,34 @@
   },
   "devDependencies": {
     "@types/hapi__joi": "^17.1.2",
+    "@types/sequelize": "^4.28.9",
     "eslint": "7.2.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-config-standard": "14.1.1",
     "eslint-plugin-import": "2.21.2",
     "eslint-plugin-jest": "23.13.2",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "3.1.3",
+    "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.0.1",
     "husky": "4.2.5",
     "nodemon": "2.0.4",
     "prettier": "2.0.5",
-    "sequelize": "^5.21.12",
+    "sequelize": "^5.21.13",
     "sequelize-cli": "^5.5.1"
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "@koa/cors": "3.1.0",
+    "argon2": "^0.26.2",
     "dotenv": "8.2.0",
-    "koa": "2.12.0",
+    "koa": "2.12.1",
     "koa-bodyparser": "4.3.0",
     "koa-compress": "4.0.1",
     "koa-helmet": "5.2.0",
     "koa-logger": "3.2.1",
     "koa-router": "9.0.1",
+    "mariadb": "^2.4.0",
     "uuid": "8.1.0"
   },
   "repository": {
