--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "peaceful-cats-6777",
+  "name": "koa-blueprint",
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
@@ -25,8 +25,7 @@
     "eslint-plugin-standard": "4.0.1",
     "husky": "4.2.5",
     "nodemon": "2.0.4",
-    "prettier": "2.0.5",
-    "sequelize-cli": "^6.2.0"
+    "prettier": "2.0.5"
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
@@ -35,12 +34,13 @@
     "dotenv": "8.2.0",
     "koa": "2.13.0",
     "koa-bodyparser": "4.3.0",
-    "koa-compress": "5.0.0",
+    "koa-compress": "5.0.1",
     "koa-helmet": "5.2.0",
     "koa-logger": "3.2.1",
     "koa-router": "9.1.0",
-    "pg": "^8.2.1",
+    "pg": "^8.2.2",
     "sequelize": "^6.3.0",
+    "sequelize-cli": "^6.2.0",
     "uuid": "8.2.0"
   },
   "repository": {
